# mttr

./: .gitignore  .prettierrc  CLAUDE.md  README.md  components.json  index.html  package.json  vite.config.ts
.claude/: settings.local.json
models/: 1060.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  serial.rs  servo.rs
src/components/: ConnectedView.tsx  ControlTableValue.tsx  ScanDialog.tsx  ScanForm.tsx  ServoDetail.tsx  ServoSidebar.tsx  VelocityControl.tsx  WelcomeScreen.tsx
src/components/settings/: AppearanceSettings.tsx  GeneralSettings.tsx  SettingsPage.tsx  ShortcutsSettings.tsx  Theme.tsx
src/components/ui/: alert-dialog.tsx  select.tsx  slider.tsx
src/hooks/: useTheme.ts
src/lib/: models.ts  platform.ts  servo.ts  store.ts
