[package]
name = "mttr"
version = "0.1.0"
description = "A lightweight GUI control program for Dynamixel servos"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mttr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
cocoa = "0.26.1"
tauri-plugin-store = "2"
dynamixel_sdk = { git = "https://github.com/seagullcjung/dynamixel-sdk-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
